--- a/index.html
+++ b/index.html
@@ -70,6 +70,15 @@
                 <span><a href="lx6/lx6-a.html">查看更多</a></span>
             </div>
         </div>
+        <div class="chichun-bujukuang zibuju-a">七
+            <div class="chichun-zhanshikuang zibuju-b">
+                <iframe src="lx7/lx7.html" width="100%" height="100%" frameborder="0"></iframe>
+            </div>
+            <div class="zibuju-b zibuju-c">
+                <p>练习七</p>
+                <span><a href="lx7/lx7-a.html">查看更多</a></span>
+            </div>
+        </div>
     </div>
     <!-- <header class="toubu">
         <p>css</p>
