--- a/index.html
+++ b/index.html
@@ -79,6 +79,52 @@
                 <span><a href="lx7/lx7-a.html">查看更多</a></span>
             </div>
         </div>
+                <div class="chichun-bujukuang zibuju-a">八
+            <div class="chichun-zhanshikuang zibuju-b">
+                <iframe src="lx8/lx8.html" width="100%" height="100%" frameborder="0"></iframe>
+            </div>
+            <div class="zibuju-b zibuju-c">
+                <p>练习八</p>
+                <span><a href="lx8/lx8-a.html">查看更多</a></span>
+            </div>
+        </div>
+        <div class="chichun-bujukuang zibuju-a">九
+            <div class="chichun-zhanshikuang zibuju-b">
+                <iframe src="lx9/lx9.html" width="100%" height="100%" frameborder="0"></iframe>
+            </div>
+            <div class="zibuju-b zibuju-c">
+                <p>练习九</p>
+                <span><a href="lx9/lx9-a.html">查看更多</a></span>
+            </div>
+        </div>
+        <div class="chichun-bujukuang zibuju-a">十
+            <div class="chichun-zhanshikuang zibuju-b">
+                <iframe src="lx10/lx10.html" width="100%" height="100%" frameborder="0"></iframe>
+            </div>
+            <div class="zibuju-b zibuju-c">
+                <p>练习十</p>
+                <span><a href="lx10/lx10-a.html">查看更多</a></span>
+            </div>
+        </div>
+        <div class="chichun-bujukuang zibuju-a">十一
+            <div class="chichun-zhanshikuang zibuju-b">
+                <iframe src="lx11/lx11.html" width="100%" height="100%" frameborder="0"></iframe>
+            </div>
+            <div class="zibuju-b zibuju-c">
+                <p>练习十一</p>
+                <span><a href="lx11/lx11-a.html">查看更多</a></span>
+            </div>
+        </div>
+        <div class="chichun-bujukuang zibuju-a">十二
+            <div class="chichun-zhanshikuang zibuju-b">
+                <div>由于此案例加载缓慢，故隐藏，请点击下方查看更多按钮查看</div>
+                <!-- <iframe src="" width="100%" height="100%" frameborder="0"></iframe> -->
+            </div>
+            <div class="zibuju-b zibuju-c">
+                <p>练习十二</p>
+                <span><a href="lx12/lx12-a.html">查看更多</a></span>
+            </div>
+        </div>
     </div>
     <!-- <header class="toubu">
         <p>css</p>
