--- a/index.html
+++ b/index.html
@@ -11,9 +11,71 @@
 </head>
 
 <body>
-    <header class="toubu">
+    <header class="toubu" style="background-color: rgb(255, 255, 255,0);border-radius: 0;box-shadow: none;">
         <!-- 显示打字效果的元素 -->
         <p id="dz" class="dz dz-a"></p>
+    </header>
+    <header class="toubu">
+        <p>纯html</p>
+    </header>
+    <div class="buju">
+        <div class="chichun-bujukuang zibuju-a">十三
+            <div class="chichun-zhanshikuang zibuju-b">
+                <iframe src="lx13/lx13.html" width="100%" height="100%" frameborder="0"></iframe>
+            </div>
+            <div class="zibuju-b zibuju-c">
+                <p>练习十三</p>
+                <span><a href="lx13/lx13-a.html">查看更多</a></span>
+            </div>
+        </div>
+        <div class="chichun-bujukuang zibuju-a">十四
+            <div class="chichun-zhanshikuang zibuju-b">
+                <iframe src="lx14/lx14.html" width="100%" height="100%" frameborder="0"></iframe>
+            </div>
+            <div class="zibuju-b zibuju-c">
+                <p>练习十四</p>
+                <span><a href="lx14/lx14-a.html">查看更多</a></span>
+            </div>
+        </div>
+        <div class="chichun-bujukuang zibuju-a">十五
+            <div class="chichun-zhanshikuang zibuju-b">
+                <iframe src="lx15/lx15.html" width="100%" height="100%" frameborder="0"></iframe>
+            </div>
+            <div class="zibuju-b zibuju-c">
+                <p>练习十五</p>
+                <span><a href="lx15/lx15-a.html">查看更多</a></span>
+            </div>
+        </div>
+        <div class="chichun-bujukuang zibuju-a">十六
+            <div class="chichun-zhanshikuang zibuju-b">
+                <iframe src="lx16/lx16.html" width="100%" height="100%" frameborder="0"></iframe>
+            </div>
+            <div class="zibuju-b zibuju-c">
+                <p>练习十六</p>
+                <span><a href="lx16/lx16-a.html">查看更多</a></span>
+            </div>
+        </div>
+        <div class="chichun-bujukuang zibuju-a">十七
+            <div class="chichun-zhanshikuang zibuju-b">
+                <iframe src="lx17/lx17.html" width="100%" height="100%" frameborder="0"></iframe>
+            </div>
+            <div class="zibuju-b zibuju-c">
+                <p>练习十七</p>
+                <span><a href="lx17/lx17-a.html">查看更多</a></span>
+            </div>
+        </div>
+        <div class="chichun-bujukuang zibuju-a">十八
+            <div class="chichun-zhanshikuang zibuju-b">
+                <iframe src="lx18/lx18.html" width="100%" height="100%" frameborder="0"></iframe>
+            </div>
+            <div class="zibuju-b zibuju-c">
+                <p>练习十八</p>
+                <span><a href="lx18/lx18-a.html">查看更多</a></span>
+            </div>
+        </div>
+    </div>
+    <header class="toubu">
+        <p>html+css</p>
     </header>
     <div class="buju">
         <div class="chichun-bujukuang zibuju-a">一
@@ -70,6 +132,11 @@
                 <span><a href="lx6/lx6-a.html">查看更多</a></span>
             </div>
         </div>
+    </div>
+    <header class="toubu">
+        <p>html+css+js</p>
+    </header>
+    <div class="buju">
         <div class="chichun-bujukuang zibuju-a">七
             <div class="chichun-zhanshikuang zibuju-b">
                 <iframe src="lx7/lx7.html" width="100%" height="100%" frameborder="0"></iframe>
@@ -79,7 +146,7 @@
                 <span><a href="lx7/lx7-a.html">查看更多</a></span>
             </div>
         </div>
-                <div class="chichun-bujukuang zibuju-a">八
+        <div class="chichun-bujukuang zibuju-a">八
             <div class="chichun-zhanshikuang zibuju-b">
                 <iframe src="lx8/lx8.html" width="100%" height="100%" frameborder="0"></iframe>
             </div>
@@ -126,88 +193,7 @@
             </div>
         </div>
     </div>
-    <!-- <header class="toubu">
-        <p>css</p>
-    </header>
-    <div class="buju">
-        <div class="chichun-bujukuang zibuju-a">1
-            <div class="chichun-zhanshikuang zibuju-b">a</div>
-            <div class="zibuju-a">
-                <p>a</p>
-            </div>
-        </div>
-        <div class="chichun-bujukuang zibuju-a">2
-            <div class="chichun-zhanshikuang zibuju-b">a</div>
-            <div class="zibuju-a">
-                <p>a</p>
-            </div>
-        </div>
-        <div class="chichun-bujukuang zibuju-a">3
-            <div class="chichun-zhanshikuang zibuju-b">a</div>
-            <div class="zibuju-a">
-                <p>a</p>
-            </div>
-        </div>
-        <div class="chichun-bujukuang zibuju-a">4
-            <div class="chichun-zhanshikuang zibuju-b">a</div>
-            <div class="zibuju-a">
-                <p>a</p>
-            </div>
-        </div>
-        <div class="chichun-bujukuang zibuju-a">5
-            <div class="chichun-zhanshikuang zibuju-b">a</div>
-            <div class="zibuju-a">
-                <p>a</p>
-            </div>
-        </div>
-        <div class="chichun-bujukuang zibuju-a">6
-            <div class="chichun-zhanshikuang zibuju-b">a</div>
-            <div class="zibuju-a">
-                <p>a</p>
-            </div>
-        </div>
-    </div>
-    <header class="toubu">
-        <p>js</p>
-    </header>
-    <div class="buju" style="margin-bottom: 3px;">
-        <div class="chichun-bujukuang zibuju-a">1
-            <div class="chichun-zhanshikuang zibuju-b">a</div>
-            <div class="zibuju-a">
-                <p>a</p>
-            </div>
-        </div>
-        <div class="chichun-bujukuang zibuju-a">2
-            <div class="chichun-zhanshikuang zibuju-b">a</div>
-            <div class="zibuju-a">
-                <p>a</p>
-            </div>
-        </div>
-        <div class="chichun-bujukuang zibuju-a">3
-            <div class="chichun-zhanshikuang zibuju-b">a</div>
-            <div class="zibuju-a">
-                <p>a</p>
-            </div>
-        </div>
-        <div class="chichun-bujukuang zibuju-a">4
-            <div class="chichun-zhanshikuang zibuju-b">a</div>
-            <div class="zibuju-a">
-                <p>a</p>
-            </div>
-        </div>
-        <div class="chichun-bujukuang zibuju-a">5
-            <div class="chichun-zhanshikuang zibuju-b">a</div>
-            <div class="zibuju-a">
-                <p>a</p>
-            </div>
-        </div>
-        <div class="chichun-bujukuang zibuju-a">6
-            <div class="chichun-zhanshikuang zibuju-b">a</div>
-            <div class="zibuju-a">
-                <p>a</p>
-            </div>
-        </div>
-    </div> -->
+
     <!-- 引入打字效果js -->
     <script src="js/dzxg.js"></script>
 </body>
