--- a/lx13/lx13-a.html
+++ b/lx13/lx13-a.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>练习八</title>
+    <title>练习十三</title>
     <!-- 全局样式 -->
     <style>
         * {
