--- a/lx16/lx16-a.html
+++ b/lx16/lx16-a.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>练习八</title>
+    <title>练习十六</title>
     <!-- 全局样式 -->
     <style>
         * {
@@ -21,7 +21,7 @@
             justify-content: center;
             align-items: center;
             min-height: 100vh;
-            background-color: hsl(188, 100%, 90%);
+            background-color: hsl(349, 100%, 90%);
             /* overflow: hidden; */
             flex-direction: column;
         }
